--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "scripts": {
     "dev": "node server.js",
     "build": "next build",
-  "start": "SET NODE_ENV=production node server.js"
+	"start": "next build; NODE_ENV=production node server.js"
   },
   "dependencies": {
     "axios": "^0.24.0",
